--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
+    "react-router": "^7.9.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
